tests/semantic/valid/12_logical_ops.tc
int main(void) {
    int a = 5;
    int b = 0;
    if (a > 0 && b == 0)
        return 1;
    if (a < 0 || b > 0)
        return 2;
    return 3;
}
